<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">A39EjercicioPractico</string>

    <string name="un_jugador">1 Jugador</string>

    <string name="dos_jugador">2 Jugadores</string>

    <string name="facil">Facil</string>

    <string name="normal">Normal</string>

    <string name="imposible">Imposible</string>

    <string name="casilla">Casilla</string>

    <string name="circulos_ganan">Circulos ganan</string>

    <string name="aspas_ganan">Aspas ganan</string>

    <string name="empate">Empate</string>

</resources>
